force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/G2Crowd__G2_Event_Aggregate__c.object-meta.xml
<CustomObject>
    <label>G2 Event Aggregate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Event Aggregates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>