force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/fields/G2Crowd__Account__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>G2 Event Aggregates</relationshipLabel>
    <relationshipName>G2_Event_Aggregates</relationshipName>
    <type>Lookup</type>
</CustomField>