force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/fields/G2Crowd__Event_Count__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Event_Count__c</fullName>
    <label>Event Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>