force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/fields/G2Crowd__Period__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>