force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/fields/G2Crowd__Tag__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Tag__c</fullName>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>