force-app/main/default/objects/G2Crowd__G2_Event_Aggregate__c/fields/G2Crowd__Timeframe__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Timeframe__c</fullName>
    <formula>IF( TEXT(G2Crowd__Period__c) == &apos;1&apos;, &apos;Day&apos;, IF( TEXT(G2Crowd__Period__c) == &apos;7&apos;, &apos;Week&apos;, IF( TEXT(G2Crowd__Period__c) == &apos;30&apos;, &apos;Month&apos;, &apos;Older&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeframe</label>
    <type>Text</type>
</CustomField>